# ca_rust

./: .env.example  .gitignore  Cargo.toml  README.md  package-lock.json  test_migration.rs
logs/: CA.log.2026-04-24
src/: main.rs  mod.rs
src/api/: mod.rs  routes.rs  swagger.rs  swaggerApiResponseString.rs
src/api/echo/: handlers.rs
src/api/health/: handlers.rs
src/api/hello/: handlers.rs
src/api/system_info/: handlers.rs  mod.rs  systemInfolers.rs
src/api/users/: handlers.rs  routes.rs
src/api/users/handlers/: change_password.rs  create.rs  delete.rs  mod.rs  update.rs
src/application/: mod.rs  services.rs
src/application/common/: service.rs
src/application/hello/: service.rs
src/application/system_info/: service.rs
src/application/users/: mod.rs
src/application/users/command/: mod.rs
src/application/users/command/change_password/: dto.rs  mod.rs  server.rs  validator.rs
src/application/users/command/create/: dto.rs  mod.rs  server.rs  validator.rs  validatorCommand.rs
src/application/users/command/delete/: dto.rs  mod.rs  server.rs  validator.rs
src/application/users/command/update/: dto.rs  mod.rs  server.rs  validator.rs
src/domain/: entities.rs  mod.rs  responses.rs  value_objects.rs
src/domain/entities/: base_entity.rs  mod.rs  user.rs
src/infrastructure/: config.rs  database.rs  mod.rs  repositories.rs
src/infrastructure/common/: auth_utils.rs  mod.rs  response.rs  security.rs
src/infrastructure/database/: connection.rs  migration.rs  migration_manager.rs  mod.rs
src/infrastructure/database/migrations/: _0000001_create_users.rs  migration_versions.rs  mod.rs  users.rs
src/repositories/: base_repository.rs  mod.rs  user_repository.rs
