[package]
name = "VisualEngine"
version = "0.1.0"
edition = "2024"

[dependencies]
# Axum 核心（包含 WebSocket、异步、JSON 等核心能力）
axum = { version = "0.7.0", features = ["ws", "macros", "json", "tokio"] }

# Tokio 异步运行时（Axum 必须依赖，full 包含所有异步特性）
tokio = { version = "1.0", features = ["full"] }

# 日志（边缘引擎必备，替代 println）
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# JSON 序列化/反序列化
serde = { version = "1.0", features = ["derive"] }

# Swagger/OpenAPI 文档生成
utoipa = { version = "4", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "5", features = ["axum"] }
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.8", features = ["v4", "v7", "serde", "std"] }

# 密码哈希
bcrypt = "0.15"

# 验证库
validator = { version = "0.16", features = ["derive"] }

# 正则表达式
regex = "1.0"

# 懒加载静态变量
lazy_static = "1.4"

# 配置管理
dotenvy = "0.15"

# SeaORM 数据库 ORM
sea-orm = { version = "1.1.20", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = "1.1.20"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "chrono"] }

# 异步 trait 支持
async-trait = "0.1"
